// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`keyrack relock cli given: [case1] any repo when: [t0] rhx keyrack relock --help then: stdout matches snapshot 1`] = `
"Usage: rhachet keyrack relock [options]

prune keys from daemon memory (default: all keys)

Options:
  --owner <owner>  owner identity (e.g., mechanic, foreman)
  --for <owner>    alias for --owner
  --env <env>      filter by env (test, prod, prep, all, sudo, camp)
  --key <slug>     relock specific key
  --json           output as json (robot mode)
  -h, --help       display help for command
"
`;

exports[`keyrack relock cli given: [case2] repo with keyrack manifest, relock camp when: [t0] rhx keyrack relock --env camp (no camp keys in daemon) then: stdout matches snapshot 1`] = `
"
🔒 keyrack relock
   └─ (no keys to prune)

"
`;

exports[`keyrack relock cli given: [case3] one slug held at two reaches, then relocked when: [t0] both reaches are unlocked, then the key is relocked then: the relock tree renders as snapped 1`] = `
"
🔒 keyrack relock
   └─ testorg.test.API_KEY: pruned 🔒

"
`;

exports[`keyrack relock cli given: [case3] one slug held at two reaches, then relocked when: [t1] the rack is read back after the relock then: the emptied rack renders as snapped 1`] = `
"
🔐 keyrack status
   ├─ owner: (default)
   ├─ recipients:
   │  └─ test-key (age)
   └─ daemon: active ✨
      └─ (no keys unlocked)

"
`;
